# JniDemo

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JniTest.cpp  JniTest.h  native-lib.cpp
app/src/main/java/com/example/jnidemo/: Location.java  MainActivity.java  Persion.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
